--- a/design-brief.html
+++ b/design-brief.html
@@ -697,7 +697,7 @@
 
 </p>
                             <h4 class="mb-3">Second Law</h4>
-                            <p class="light-font mb-5">A.I.D.A creates curriculums and questions based on <b>what the user wants</b> and his/her learning style and so, our users have maximum control over the software.</p>
+                            <p class="light-font mb-5">A.I.D.A creates curriculums and questions based on <b>what the user wants</b> and his/her learning style, so our users have maximum control over the software.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
