--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ What is TSA beginning
                             <h3 class="section-heading mb-4">
                                 What is TSA
                             </h3>
-                            <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, the members are able to represent their school and community when competing. </p>
-                            <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
+                            <p>TSA (Technology Student Association) is a national organization dedicated to creating future leaders in the science, technology, engineering, and mathematics fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, the members are able to represent their school and community when competing. </p>
+                            <p>The TSA motto “learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s most concerning problems.</p>
 
                             <h4 class="section-heading mb-4">
                                 TSA Events
@@ -271,7 +271,7 @@ Who We Are beginning
                         </h3>
                         <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
-                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited <b>66</b> loyal members were recruited. The chapter is collectively participating in <b>19</b> competitive events for the first time at the NJ state conference this spring. </p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited <b>66</b> loyal members were recruited. The chapter collectively participated in <b>17</b> competitive events for the first time at the NJ state conference this spring. We are now competing in 6 competitive events at the National Conference from June 22nd to June 26th. </p>
                         <h3 class = "text-white">Creed</h3>
                         <p class = "text-white">I believe in using technology to <b>make the world a better place.</b> I believe in <b>collaborating with others</b> to create beneficial solutions for the future. I believe that I should be dedicated to creating new technologies and <b>educating others about technology.</b> I will strive to better the world around us and to <b>spread the influence of technology.</b></p>
                     </div>
@@ -309,11 +309,11 @@ Who We Are beginning
 
                             <h2> Meetings</h2>
                             <h4>Attendance & Checkpoints</h4>
-                            <p>Before the start of every club meeting, each student must sign in to attendance via Google Form. Once a month, the officers send a checkpoint form through email to check up on the progress of each group. The weekly after school meeting following this checkpoint, the officers meet with each group in person to check in on their progress, answer questions, and help them plan for the next week. The officers will advise each group as they move closer to the competition dates.
+                            <p>Before the start of every club meeting, each student must sign in to attendance via Google Form. Once a month, the officers send a checkpoint form through email to check up on the progress of each group. During the weekly after school meeting following this checkpoint, the officers meet with each group in person to check in on their progress, answer questions, and help them plan for the next week. The officers will advise each group as they move closer to the competition dates.
                             </p>
                             <h4>Weekly After School Meetings</h4>
                             <p> 
-                                To keep all students intact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
+                                To keep all students intact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project and to collaborate on plans for the upcoming competitions.
                             </p>
                             <div>
                                 <img style="width:auto; height:350px"src="img/weeklymeetings1.JPG"/>
@@ -329,10 +329,10 @@ Who We Are beginning
                         <div>
                             <h2>Recruitment</h2>
                             <h4>Club Fair</h4>
-                            <p>Club fair is a school program in which each club has a chance to showcase the main message of the club, and can directly recruit members by recording their names and contact information. The TSA club of High School North was able to gain 66 loyal members through that short fair and hopefully, will be able to expand on that number by next year’s fair.
+                            <p>Club Fair is a school program where each club has a chance to directly recruit members by recording their contact information. The TSA club of High School North was able to gain 63 loyal members through that short fair, and we hope to expand on that number by next year’s fair.
                             </p>
                             <h4>Lab Safety Training</h4>
-                            <p> The lab safety training is a TSA school club program that teaches each student the different technology available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room has enough experience and knowledge to ensure their own safety and the safety of those around them. If the student passes the quiz, they will have access to all the lab’s machinary.
+                            <p> The lab safety training is a TSA school club program that trains each student on the different engineering equipment available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room has enough experience and knowledge to ensure their own safety and the safety of those around them. If the student passes the quiz, they will have access to all the lab’s machinary.
                             </p>
                             <div>
                                 <img style="width:auto; height:250px"src="img/lab1.png"/>
@@ -364,7 +364,7 @@ Who We Are beginning
                         <div>
                             <h2>Community</h2>
                             <h4>Project Code</h4>
-                            <p>Project Code is a community program founded by 3 members of our TSA chapter to provide elementary school kids access to free programming classes. Members of our TSA chapter created a 3 month long Scratch programming curriculum, contacted libraries, and promoted the classes to the community. So far, the team has taught 60 students in 2 local libraries - Hamilton and Monroe.
+                            <p>Project Code is a community program founded by 3 members of our TSA chapter to provide elementary school kids access to free programming classes. Members of our TSA chapter created a 3 month long Scratch programming curriculum, contacted libraries, and promoted the classes to the community. So far, the team has taught 90 students in 2 local libraries - Hamilton and Monroe.
                             </p>
                             <div>
                                 <img style="width:auto; height:350px"src="img/projectcode1.jpg"/>
@@ -374,7 +374,7 @@ Who We Are beginning
                             <br>
                             <h4>Innovation Fair</h4>
                             <p> 
-                                Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to showcase their TSA projects in the community. The Innovation Fair in West Windsor-Plainsboro is a public community fair where students from different schools come to display their innovative projects. Members of our TSA chapter have been accepted to showcase their projects at this fair this spring.
+                                Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to showcase their TSA projects in the community. The Innovation Fair in West Windsor-Plainsboro is a public community fair held in May where students from different schools come to display their innovative projects. Members of our TSA chapter have been accepted to showcase their projects at this fair this spring.
                             </p>
 
                         </div>
