--- a/design-brief.html
+++ b/design-brief.html
@@ -721,15 +721,12 @@
 
 
         <footer class="my-5 text-center">
-                <small>
-                        <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
-                        <br>
-                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
-                        <br>
-                        <a href="" style="text-decoration:none" class="m-2">2201007,  2201008,  2201019, 2201020, 2201030 </a>
-                    </small>
+            <small>
+                <a href="" style="text-decoration:none" class="m-2">Webmaster Team T5248 </a>
+                <br>
+                <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+            </small>
         </footer>
-
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
 
         <script type ="text/javascript" src="js/competitions.js"> </script>
