--- a/index.html
+++ b/index.html
@@ -710,11 +710,9 @@ Who We Are beginning
     <script  src="js/competitions.js"></script>
     <footer class="my-5 text-center">
         <small>
-            <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
+            <a href="" style="text-decoration:none" class="m-2">Webmaster Team T5248 </a>
             <br>
             <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
-            <br>
-            <a href="" style="text-decoration:none" class="m-2">2201007,  2201008,  2201019, 2201020, 2201030 </a>
         </small>
     </footer>
 
