--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ Who We Are beginning
                         </div>
                     </div>
                     <div class="container .nobg">
-                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference was held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey competed in over 30 different events and the winners are proceeding to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we collectively participated in 17 events with a majority of members doing multiple events.
+                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference was held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey competed in over 30 different events and some of the winners are proceeding to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we collectively participated in 17 events with a majority of members doing multiple events.
                             <br>   
                             <img width="auto" height="auto" src="img/stateconf.jpg_large"/>
 
@@ -623,7 +623,7 @@ Who We Are beginning
                         </div>
                     </div>
                     <div class="container">
-                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The national TSA conference is from June 22nd to June 26th. This year, it is being held in Atlanta, Georgia. Students from all over the country who have won at their state competitions will be competing in this 4 day long conference, participiating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
+                        <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The national TSA conference is from June 22nd to June 26th. This year, it is being held in Atlanta, Georgia. Students from all over the country will be competing in this 5 day long conference, participiating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
                     </div>
                 </section>
                 <section class="accordions__accordion">
@@ -653,7 +653,7 @@ Who We Are beginning
         <div class="section-title" id = "awards">
             <h3>OUR AWARDS</h3>
             <p class = "text-center col-lg-6 col-centered">
-                In our first year as a club, our 66 students placed in 9 total events at the state conference! The winning teams are now heading to the national competition. 
+                In our first year as a club, our 66 students placed in 9 total events at the state conference! Some of the winning teams are now heading to the national competition. 
             </p>
             <table class = "col-lg-6 col-centered">
                 <thead>
