student projects updated info

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Who We Are beginning
                         <br>
                         <div class = "row">
                             <div class = "bqcontainer col col-lg-7">
-                                <blockquote class="blockquote text-white">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. 
+                                <blockquote class="blockquote text-white">One of the events our club is competing in is Biotechnology Design. Because this year’s topic was food, the group  focused on how biological diseases in Eastern Africa are inhibiting the growth of crops and destroying food supplies. This group took the challenge head on by consulting  the school’s AP Biology teachers and analyzing research from professors, to write an extensive research paper and create a solution to eradicate the problem.
                                 </blockquote>
                             </div>
                             <img  class = "col col-lg-5" style="height:280px; width:auto;" src = "./img/biotechnology.jpg">
@@ -409,7 +409,7 @@ Who We Are beginning
                         <br>
                         <div class = "row">
                             <div class = "bqcontainer col col-lg-7">
-                                <blockquote class="blockquote text-white">The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
+                                <blockquote class="blockquote text-white">The video game design group was challenged to create a sports themed game. The 6 participants of this event were very innovative on their approach to the challenge; they wanted to create a game based off a sport that is not very commonly seen as a game. The team used a cross-platform game engine, Unity, to create a high quality car racing game. 
                                 </blockquote>
                             </div>
                             <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/videogame.jpg">
@@ -421,7 +421,7 @@ Who We Are beginning
                         <div class="row">
                             <div class = "bqcontainer col col-lg-7">
                                 <blockquote class="blockquote text-white">
-                                    This year, the challenge for TSA's Children Stories event was to create an electronically enhanced storybook. This team took this challenge head on.
+                                    This year, the challenge for the TSA Children stories event was to design an electronically enhanced story book. The team was able to come up with a very creative final project as each member of the group had different strengths that they brought to the table. Some members were very strong in software engineering and computer science while others were tutors who understood the fundations from which children learn.  This combination of talented members helped the event group create an eloquent children’s story.
                                 </blockquote>
                             </div>
                             <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/childrens-stories.jpg">
@@ -433,7 +433,7 @@ Who We Are beginning
                         <div class = "row">
                             <div class = "bqcontainer col col-lg-7">
                                 <blockquote class="blockquote text-white">
-                                    This group created an informercial for the TSA Children's Stories event. They incorporated VFX to complement their cinematography.
+                                    The digital video production group was challenged to make a public service announcement and a digital video. This group created an infomercial for the TSA children stories event. They used Final Cut Pro and Adobe After Effects to create a video using high-quality VFX.
                                 </blockquote>
                             </div>
                             <img class = "col col-lg-5" style="height:280px;width:auto;"  src = "./img/digital-production.jpg">
