--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Who We Are beginning
                     <div class="thumbnail"><img src="officers/sahit.png"/></div>
                     <h3>Sahit Penmatcha</h3>
                     <h4>President</h4>
-                    <p class="description">Sahit is a founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, informs the committee about what should be done, and sets up meetings with various sources.</p>
+                    <p class="description">Sahit is a founder and president of WWP HSN TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, informs the committee about what should be done, and sets up meetings with various sources.</p>
                 </div>
                 <div class="product" product-id="2">
                     <div class="thumbnail"><img src="officers/neil.png"/></div>
