--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@ What is TSA beginning
                             </h4>
 
                             <p>TSA has more than 30 competitive events that range in topics covering science, technology, engineering, art, and math. </p>
-                            <p> To help students figure out what events are what best for them, the HSN TSA chapter has created an automated event suggestion tool! Click the button below to give a try. </p></p>
+                            <p> To help students figure out what events are what best for them, the HSN TSA chapter has created an automated event suggestion tool! </p></p>
 
-                        <a href="eventfinder.html" class="animsition btn btn-primary">TSA Event Finder</a>
+                        <a href="eventfinder.html" class="animsition btn btn-primary">TSA Event Finder Tool</a>
                     </div>           
                 </div>
 
