--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Who We Are beginning
                         </h3>
                         <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
-                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited <b>66</b> loyal members were recruited. The chapter collectively participated in <b>17</b> competitive events for the first time at the NJ state conference this spring. We are now competing in 6 competitive events at the National Conference from June 22nd to June 26th. </p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where <b>63</b> loyal members were recruited. The chapter collectively participated in <b>17</b> competitive events for the first time at the NJ state conference this spring. We are now competing in 6 competitive events at the National Conference from June 22nd to June 26th. </p>
                         <h3 class = "text-white">Creed</h3>
                         <p class = "text-white">I believe in using technology to <b>make the world a better place.</b> I believe in <b>collaborating with others</b> to create beneficial solutions for the future. I believe that I should be dedicated to creating new technologies and <b>educating others about technology.</b> I will strive to better the world around us and to <b>spread the influence of technology.</b></p>
                     </div>
@@ -653,7 +653,7 @@ Who We Are beginning
         <div class="section-title" id = "awards">
             <h3>OUR AWARDS</h3>
             <p class = "text-center col-lg-6 col-centered">
-                In our first year as a club, our 66 students placed in 9 total events at the state conference! Some of the winning teams are now heading to the national competition. 
+                In our first year as a club, our 63 students placed in 9 total events at the state conference! Some of the winning teams are now heading to the national competition. 
             </p>
             <table class = "col-lg-6 col-centered">
                 <thead>
