--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ What is TSA beginning
                             <p>TSA has more than 30 competitive events that range in topics covering science, technology, engineering, art, and math. </p>
                             <p> To help students figure out what events are what best for them, the HSN TSA chapter has created an automated event suggestion tool! </p></p>
 
-                        <a href="eventfinder.html" class="animsition btn btn-primary">TSA Event Finder Tool</a>
+                        <a href="eventfinder.html" class="btn btn-primary">TSA Event Finder Tool</a>
                     </div>           
                 </div>
 
