--- a/cte.html
+++ b/cte.html
@@ -246,7 +246,7 @@
             <section  id="cd-timeline" class="cd-container"> 
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-picture">
-                        <img id = "timeline-card-img1" src="http://www.iconsplace.com/icons/preview/white/number-1-filled-256.png" alt="Picture"> 
+                        <img id = "timeline-card-img1" src="img/num1.png" alt="Picture"> 
 
                     </div> <!-- cd-timeline-img -->
 
@@ -258,7 +258,7 @@
                 </div>  <!-- cd-timeline-block -->
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-movie">
-                        <img id = "timeline-card-img2" src="http://www.iconsplace.com/icons/preview/white/number-2-filled-256.png" alt="Movie">
+                        <img id = "timeline-card-img2" src="img/num2.png" alt="Movie">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
@@ -269,7 +269,7 @@
                 </div> <!-- cd-timeline-block -->
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-location">
-                        <img id = "timeline-card-img3" src="http://www.iconsplace.com/icons/preview/white/number-3-filled-256.png" alt="Picture">
+                        <img id = "timeline-card-img3" src="img/num3.png" alt="Picture">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
@@ -280,7 +280,7 @@
                 </div> <!-- cd-timeline-block -->
                 <div class="cd-timeline-block" id = "timeline-block-4">
                     <div class="cd-timeline-img cd-picture">
-                        <img id = "timeline-card-img4" src="http://www.iconsplace.com/icons/preview/white/number-4-filled-256.png" alt="Location">
+                        <img id = "timeline-card-img4" src="img/num4.png" alt="Location">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
