--- a/cte.html
+++ b/cte.html
@@ -292,8 +292,8 @@
             </section> <!-- cd-timeline -->
 
 
-            <!--
-<div class="cards">
+         
+ <div class="cards">
 
 <div id="staff"  class="section3-title">
 <small>STAFF</small>
@@ -376,9 +376,8 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 
 
 
-</div>
--->
-            <div class = "section" id = "staff">
+</div> 
+            <!-- <div class = "section" id = "staff">
                 <h3 class = "text-white text-center"> Our Teachers</h3>
                 <br>
                 <div class="row active-with-click">
@@ -449,7 +448,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                         </article>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
