--- a/ctetest.html
+++ b/ctetest.html
@@ -3,11 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WWP HSN TSA</title>
+        <link rel="stylesheet" href="css/cards.css"> <!-- LOOK AT THIS -->
+
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel = "stylesheet" href = "css/timeline.css">
         <link rel="stylesheet" href="css/animsition.min.css">
-        <link rel="stylesheet" href="css/cards.css"> <!-- LOOK AT THIS -->
         <link rel="icon" href="img/icon.png">
 
 
@@ -384,16 +385,16 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 <h3 class = "text-white text-center"> Our Teachers</h3>
                 <br>
                 <div class="row active-with-click">
-                    <div class="card">
-                        <div class="card-header">
+                    <div class="cardd">
+                        <div class="cardd-header">
                             <img src="img/iannelli.png">
                         </div>
-                        <div class="card-content">
+                        <div class="cardd-content">
                             <h3>Mr. Iannelli</h3>
                             <h4>Engineering Teacher</h4>
                             <p>Mr. Iannelli is our TSA chapter's official advisor. He was a TSA participant all throughout his high school career, and he has even judged at the TSA state conference.</p>
                         </div>
-                        <div class="card-footer">
+                        <div class="cardd-footer">
                             <ul>
                                 <li>
                                     <a href="mailto:tom.connolly@wwprsd.org"><i class="far fa-envelope"></i></a>
@@ -401,16 +402,16 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header">
+                    <div class="cardd">
+                        <div class="cardd-header">
                             <img src="img/vostal.jpeg">
                         </div>
-                        <div class="card-content">
+                        <div class="cardd-content">
                             <h3>Ms. Vostal</h3>
                             <h4>Programming Teacher</h4>
                             <p>Ms. Vostal teaches the Introduction to Programming, AP Computer Science, and AP Computer Science Principles courses at our school. She is an advocate for women in STEM.</p>
                         </div>
-                        <div class="card-footer">
+                        <div class="cardd-footer">
                             <ul>
                                 <li>
                                     <a href="mailto:kelly.vostal@wwprsd.org"><i class="far fa-envelope"></i></a>
@@ -418,16 +419,16 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header">
+                    <div class="cardd">
+                        <div class="cardd-header">
                             <img src="img/connolly.jpg"/>
                         </div>
-                        <div class="card-content">
+                        <div class="cardd-content">
                             <h3>Mr. Connolly</h3>
                             <h4>Programming Teacher</h4>
                             <p>Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science Honors. He is also the advisor of our school's Computer Science club, and he coaches the golf team.</p>
                         </div>
-                        <div class="card-footer">
+                        <div class="cardd-footer">
                             <ul>
                                 <li>
                                     <a href="mailto:tom.connolly@wwprsd.org"><i class="far fa-envelope"></i></a>
