--- a/ctetest.html
+++ b/ctetest.html
@@ -392,7 +392,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                         <div class="cardd-content">
                             <h3>Mr. Iannelli</h3>
                             <h4>Engineering Teacher</h4>
-                            <p>Mr. Iannelli is our TSA chapter's official advisor. He was a TSA participant all throughout his high school career, and he has even judged at the TSA state conference.</p>
+                            <p>Mr. Iannelli is our TSA chapter's official advisor. He was a TSA participant all throughout his high school career, and he has even judged at multiple TSA state conference.</p>
                         </div>
                         <div class="cardd-footer">
                             <ul>
