--- a/cte.html
+++ b/cte.html
@@ -3,6 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WWP HSN TSA</title>
+        <link rel="stylesheet" href="css/cards.css"> <!-- LOOK AT THIS -->
+
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel = "stylesheet" href = "css/timeline.css">
@@ -21,7 +23,6 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="css/tcards.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/themify-icons.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -29,6 +30,8 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
         <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'>
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <script>
@@ -292,8 +295,8 @@
             </section> <!-- cd-timeline -->
 
 
-         
- <div class="cards">
+            <!--
+<div class="cards">
 
 <div id="staff"  class="section3-title">
 <small>STAFF</small>
@@ -376,83 +379,72 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 
 
 
-</div> 
-            <!-- <div class = "section" id = "staff">
+</div>
+
+-->
+
+
+            <div class = "section" id = "staff">
                 <h3 class = "text-white text-center"> Our Teachers</h3>
                 <br>
                 <div class="row active-with-click">
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <article class="material-card Red">
-                            <h2>
-                                <span>Mr. Iannelli</span>
-                                <strong>
-                                    <i class="fa fa-fw fa-star"></i>
-                                    Engineering Teacher
-                                </strong>
-                            </h2>
-                            <div class="mc-content">
-                                <div class="img-container">
-                                    <img class="img-responsive" src="img/iannelli.png">
-                                </div>
-                                <div class="mc-description">
-                                    Mr. Iannelli is our TSA chapter's official advisor. He was a TSA participant all throughout his high school career, and he has even judged at the TSA state conference.
-                                </div>
-                            </div>
-                            <a class="mc-btn-action">
-                                <i class="fa fa-bars"></i>
-                            </a>
-                        </article>
+                    <div class="cardd">
+                        <div class="cardd-header">
+                            <img src="img/iannelli.png">
+                        </div>
+                        <div class="cardd-content">
+                            <h3>Mr. Iannelli</h3>
+                            <h4>Engineering Teacher</h4>
+                            <p>Mr. Iannelli is our TSA chapter's official advisor. He was a TSA participant all throughout his high school career, and he has even judged at the TSA state conference.</p>
+                        </div>
+                        <div class="cardd-footer">
+                            <ul>
+                                <li>
+                                    <a href="mailto:tom.connolly@wwprsd.org"><i class="far fa-envelope"></i></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <article class="material-card Pink">
-                            <h2>
-                                <span>Ms. Vostal</span>
-                                <strong>
-                                    <i class="fa fa-fw fa-star"></i>
-                                    Programming Teacher
-                                </strong>
-                            </h2>
-                            <div class="mc-content">
-                                <div class="img-container">
-                                    <img class="img-responsive" src="img/vostal.jpeg">
-                                </div>
-                                <div class="mc-description">
-                                    Ms. Vostal teaches the Introduction to Programming, AP Computer Science, and AP Computer Science Principles courses at our school. She is an advocate for women in STEM.
-                                </div>
-                            </div>
-                            <a class="mc-btn-action">
-                                <i class="fa fa-bars"></i>
-                            </a>
-                        </article>
+                    <div class="cardd">
+                        <div class="cardd-header">
+                            <img src="img/vostal.jpeg">
+                        </div>
+                        <div class="cardd-content">
+                            <h3>Ms. Vostal</h3>
+                            <h4>Programming Teacher</h4>
+                            <p>Ms. Vostal teaches the Introduction to Programming, AP Computer Science, and AP Computer Science Principles courses at our school. She is an advocate for women in STEM.</p>
+                        </div>
+                        <div class="cardd-footer">
+                            <ul>
+                                <li>
+                                    <a href="mailto:kelly.vostal@wwprsd.org"><i class="far fa-envelope"></i></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <article class="material-card Purple">
-                            <h2>
-                                <span>Mr. Connolly</span>
-                                <strong>
-                                    <i class="fa fa-fw fa-star"></i>
-                                    Programming Teacher
-                                </strong>
-                            </h2>
-                            <div class="mc-content">
-                                <div class="img-container">
-                                    <img class="img-responsive" src="img/connolly.jpg">
-                                </div>
-                                <div class="mc-description">
-                                    Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science Honors. He is also the advisor of our school's Computer Science club, and he coaches the golf team.
-                                </div>
-                            </div>
-                            <a class="mc-btn-action">
-                                <i class="fa fa-bars"></i>
-                            </a>
-                        </article>
+                    <div class="cardd">
+                        <div class="cardd-header">
+                            <img src="img/connolly.jpg"/>
+                        </div>
+                        <div class="cardd-content">
+                            <h3>Mr. Connolly</h3>
+                            <h4>Programming Teacher</h4>
+                            <p>Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science Honors. He is also the advisor of our school's Computer Science club.</p>
+                        </div>
+                        <div class="cardd-footer">
+                            <ul>
+                                <li>
+                                    <a href="mailto:tom.connolly@wwprsd.org"><i class="far fa-envelope"></i></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-            <script  src="js/tcards.js"></script>
+            
             <div class="section bg-white" id = "student_projects">
                 <div class="container">
                     <div class="section-title">
@@ -476,8 +468,6 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 
                 </div>
 
-            </div>
-
             <footer class="my-5 text-center">
                 <small>
                     <a href="" style="text-decoration:none" class="m-2">Webmaster Team T5248 </a>
@@ -486,6 +476,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 </small>
             </footer>
 
+            </div>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
             <script src="./js/sketch.js"></script>
