--- a/about.html
+++ b/about.html
@@ -45,13 +45,11 @@
                                 <div class="collapse navbar-collapse" id="navbar">
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
-                                        <li class="nav-item"> <a class="nav-link" href="#leap">LEAP</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="#research">RESEARCH</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="#media">MEDIA</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="#frameworks">FRAMEWORKS</a> </li>
-                                        <li class="nav-item"> <a class="nav-link" href="#tools">TOOLS</a> </li>
                                         <li class="nav-item"><a id="cte" href="./cte.html#home" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
-                                        <li class="nav-item"><a id=design" href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                        <li class="nav-item"><a id="design" href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
                                         <li class="nav-item"><a id="chapter" href="./index.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
                                     </ul>
                                 </div>
@@ -224,21 +222,7 @@
             };
 
         </script>
-        <div class="section bg-white" id="leap">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12 col-lg-12 mx-auto">
-                    <h3 class="section-heading mb-12" style="text-align:center">
-                       LEAP Resume
-                    </h3>
-                    <br>
-                    <a href="https://docs.google.com/document/d/1oo0GMMyk3Qk19xo0hqqkqjitMkyuHyHxaaVW6SGSRg4/edit?usp=sharing" style="display:block;margin:auto;margin-right:10%;margin-left:10%" class="btn btn-primary" >View Resume</a>
 
-
-                </div>
-            </div>
-        </div>
-    </div>
          <!-- 
 Who We Are beginning
 -->
