--- a/cte.html
+++ b/cte.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Community Connect - How It Works</title>
+        <title>WWP HSN TSA</title>
         <link rel="stylesheet" href="css/cards.css"> <!-- LOOK AT THIS -->
 
         <link rel="stylesheet" href="css/example.css">
@@ -85,13 +85,18 @@
                     <div class="row">
                         <div class="col-md-12">
                             <nav class="navbar navbar-dark navbar-expand-lg">
-                                <a class="navbar-brand" href="index.html"><img src="" class="img-fluid" alt=""><b>Community Connect</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                                <a class="navbar-brand" href="index.html"><img src="" class="img-fluid" alt=""><b>W.W.P HSN</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>               
                                 <div class="collapse navbar-collapse" id="navbar">
                                     <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item"> <a class="nav-link" href="./index.html">HOME</a> </li>
-                                        <li class="nav-item"> <a class="nav-link active" href="#home">HOW IT WORKS <span class="sr-only">(current)</span></a> </li>
-                                        <li class="nav-item"><a id="resources" href="./eventfinder.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">RESOURCES</a></li>
-                                        <li class="nav-item"><a id="submit" href="./about.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">SUBMIT</a></li>
+                                        <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
+                                        <li class="nav-item"> <a class="nav-link" href="#features">CURRICULUM</a> </li>
+                                        <li class="nav-item"> <a class="nav-link" href="#staff">STAFF</a> </li>
+                                        <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
+                                        <li class="nav-item"><a id="chapter" href="./index.html" class="
+                                            animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
+                                        <li class="nav-item"><a id="design" href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                        <li class="nav-item"><a id="about" href="./about.html" class="
+                                            animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -107,7 +112,7 @@
                         <header class="info">
                             <hgroup class="about">
                                 <div class="typewriter">
-                                    <h1>How It Works</h1>
+                                    <h1>Career &amp; Technical Education</h1>
                                 </div>
                             </hgroup>
 
