--- a/about.html
+++ b/about.html
@@ -250,6 +250,7 @@
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item"> <a class="nav-link" href="index.html#home">HOME</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="cte.html">HOW IT WORKS</a> </li>
+                                        <li class="nav-item"> <a class="nav-link" href="upcoming-events.html">UPCOMING EVENTS</a> </li>
                                         <li class="nav-item"><a id="resources" href="./eventfinder.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">RESOURCES</a></li>
                                         <li class="nav-item"><a id="submit" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3" href="#home">SUBMIT <span class="sr-only">(current)</span></a></li>
                                     </ul>
