--- a/cte.html
+++ b/cte.html
@@ -224,6 +224,7 @@
                                     <ul class="navbar-nav ml-auto">
                                         <li class="nav-item"> <a class="nav-link" href="./index.html">HOME</a> </li>
                                         <li class="nav-item"> <a class="nav-link active" href="#home">HOW IT WORKS <span class="sr-only">(current)</span></a> </li>
+                                        <li class="nav-item"> <a class="nav-link" href="upcoming-events.html">UPCOMING EVENTS</a> </li>
                                         <li class="nav-item"><a id="resources" href="./eventfinder.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">RESOURCES</a></li>
                                         <li class="nav-item"><a id="submit" href="./about.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">SUBMIT</a></li>
                                     </ul>
