--- a/eventfinder.html
+++ b/eventfinder.html
@@ -512,6 +512,7 @@
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item"><a class="nav-link" href="./index.html">HOME</a></li>
                                     <li class="nav-item"><a class="nav-link" href="./cte.html">HOW IT WORKS</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="upcoming-events.html">UPCOMING EVENTS</a></li>
                                     <li class="nav-item"><a class="nav-link active" href="./eventfinder.html">RESOURCES <span class="sr-only">(current)</span></a></li>
                                     <li class="nav-item"><a id="submit" href="./about.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">SUBMIT</a></li>
                                 </ul>
