added ambient transitions to the background of timeline.

--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="img/icon.png">
 
         <link rel="stylesheet" href="css/upcoming-events.css">
+        <link rel="stylesheet" href="css/ambient-animation.css">
 
         <link rel="dns-prefetch" href="//fonts.googleapis.com">
         <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
@@ -60,7 +61,7 @@
                         <header class="info">
                             <hgroup class="about">
                                 <div class="typewriter">
-                                    <h1>UPCOMING EVENTS</h1>
+                                    <h1>Upcoming Events</h1>
                                 </div>
                                 <p class="text-white" style="font-size: 18px; margin-top: 15px;">Stay connected with what’s happening in our community.</p>
                             </hgroup>
@@ -71,13 +72,28 @@
 
             <!-- Timeline Section -->
             <section class="timeline-section">
+                <div class="ambient-background">
+                    <div class="ambient-circle"></div>
+                    <div class="ambient-circle"></div>
+                    <div class="ambient-circle"></div>
+                    <div class="ambient-circle"></div>
+                    <div class="ambient-circle"></div>
+                    <div class="ambient-circle"></div>
+                </div>
                 <div class="container">
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-content js--fadeInLeft">
                                 <h2>Community Cleanup Drive</h2>
                                 <div class="timeline-date">Nov 10</div>
-                                <p>Join us for a community-wide cleanup event. Let's make our neighborhood shine!</p>
+                                <div class="timeline-meta">
+                                    <span class="time">10:00 AM — 1:00 PM</span>
+                                    <span class="timeline-sep">•</span>
+                                    <span class="duration">Volunteers welcome</span>
+                                </div>
+                                <p>Join us for a community-wide cleanup event. We'll provide gloves, bags, and light refreshments. Meet at the south entrance of City Park.</p>
+                                <p class="small"><strong>How to prepare:</strong> Wear sturdy shoes, bring a reusable water bottle. Families encouraged.</p>
+                                <p class="small"><strong>Contact:</strong> <a href="mailto:events@community.org">events@community.org</a> — <a href="#" class="rsvp">RSVP</a></p>
                                 <span class="timeline-location">City Park</span>
                             </div>
                         </div>
@@ -86,7 +102,14 @@
                             <div class="timeline-content js--fadeInRight">
                                 <h2>STEM Mentorship Workshop</h2>
                                 <div class="timeline-date">Nov 22</div>
-                                <p>A workshop for students interested in STEM careers, featuring guest speakers and hands-on activities.</p>
+                                <div class="timeline-meta">
+                                    <span class="time">4:00 PM — 6:30 PM</span>
+                                    <span class="timeline-sep">•</span>
+                                    <span class="duration">Students (12+)</span>
+                                </div>
+                                <p>A workshop for students interested in STEM careers, featuring guest speakers from local universities and hands-on breakout sessions (robotics, coding, and design).</p>
+                                <p class="small">Seats are limited — bring a notepad and charged laptop if you have one.</p>
+                                <p class="small"><strong>Register:</strong> <a href="#" class="rsvp">Register here</a> • <strong>Info:</strong> <a href="mailto:stem@community.org">stem@community.org</a></p>
                                 <span class="timeline-location">Public Library</span>
                             </div>
                         </div>
@@ -95,7 +118,13 @@
                             <div class="timeline-content js--fadeInLeft">
                                 <h2>Holiday Food Drive</h2>
                                 <div class="timeline-date">Dec 5</div>
-                                <p>Help us collect non-perishable food items for families in need this holiday season.</p>
+                                <div class="timeline-meta">
+                                    <span class="time">9:00 AM — 4:00 PM</span>
+                                    <span class="timeline-sep">•</span>
+                                    <span class="duration">Drop-off all day</span>
+                                </div>
+                                <p>Help us collect non-perishable food items for families in need this holiday season. Suggested donations: canned vegetables, rice, pasta, baby formula, and healthy snacks.</p>
+                                <p class="small"><strong>Volunteer:</strong> Sort donations and package care boxes. <strong>Contact:</strong> <a href="mailto:fooddrive@community.org">fooddrive@community.org</a></p>
                                 <span class="timeline-location">Community Center</span>
                             </div>
                         </div>
@@ -104,7 +133,13 @@
                             <div class="timeline-content js--fadeInRight">
                                 <h2>Winter Clothing Donation</h2>
                                 <div class="timeline-date">Dec 19</div>
-                                <p>Donate warm clothing to help those in need during the cold winter months.</p>
+                                <div class="timeline-meta">
+                                    <span class="time">10:00 AM — 3:00 PM</span>
+                                    <span class="timeline-sep">•</span>
+                                    <span class="duration">All ages</span>
+                                </div>
+                                <p>Donate warm coats, hats, gloves, and blankets. All items will be checked for quality and distributed to local shelters and families in need.</p>
+                                <p class="small">Please ensure donated clothing is clean and in good condition. <strong>Questions?</strong> <a href="mailto:donations@community.org">donations@community.org</a></p>
                                 <span class="timeline-location">Town Hall</span>
                             </div>
                         </div>
